syntax = "proto3";

package search;

// Search service returns best hotel chocies for a user.
service Search {
  rpc Nearby(NearbyRequest) returns (SearchResult);
  // rpc City(CityRequest) returns (SearchResult);
}

message NearbyRequest {
  float lat = 1;
  float lon = 2;
  string inDate = 3;
  string outDate = 4;
}

// TODO(hw): add city search endpoint
// message CityRequest {
//   string city = 1;
//   string inDate = 2;
//   string outDate = 3;
// }

message SearchResult {
  repeated string hotelIds = 1;
}
